--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Wörterbuch is a Google Chrome extension that makes looking up German words in <a href="http://de.thefreedictionary.com/">The Free Dictionary</a> much easier.</p>
+        <p>Wörterbuch is a <a href="http://google.com/chrome">Google Chrome</a> extension that makes looking up German words in <a href="http://de.thefreedictionary.com/">The Free Dictionary</a> much easier.</p>
 
 <h3>Usage</h3>
 
